--- a/src/Layout/MainLayout.razor
+++ b/src/Layout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-@* <FluentToastProvider/> *@
+<FluentToastProvider/>
 @* <FluentDialogProvider/> *@
 <FluentTooltipProvider/>
 @* <FluentMessageBarProvider/> *@
