--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -18,3 +18,4 @@
 @using Sample.PdfDataExtraction.Components
 @using Microsoft.FluentUI.AspNetCore.Components
 @using Icons = Microsoft.FluentUI.AspNetCore.Components.Icons
+@using Color = Microsoft.FluentUI.AspNetCore.Components.Color
